[package]
name = "mips"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "A basic MIPS emulator written in Rust"

[lib]
name = "mips"
path = "src/lib.rs"

[dependencies]
byteorder = "0.5.3"
rustc-serialize = "0.3.19"
docopt = "0.6.86"
docopt_macros = "0.6.86"
env_logger = "0.3.5"
log = "0.3.6"
clippy = {version = "0.0.92", optional = true}

[features]
default = []
dev = ["clippy"]